--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,15 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
+container:
+  name: server-example
+  image: docker-local:5000/server
+  port: 50051
+  env:
+    - name: DATABASE_URL
+      value: postgres://admin:password@db/books
+
 
 image:
   repository: nginx
