Added nginx-grpc deployment

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -27,6 +27,6 @@ spec:
           {{- end }}
           ports:
             - containerPort: {{ $container.port }}
-              name: {{ $container.name }}
+              name: {{ $name }}
 ---
 {{- end}}
