--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,6 @@
 servers:
   server-example:
     replicas: 3
-    name: server-example
     image: docker-local:5000/server
     port: 50051
     env:
@@ -9,6 +8,9 @@ servers:
         value: postgres://admin:password@db/books
   server-hello-world:
     replicas: 3
-    name: server-hello-world
     image: docker-local:5000/server-hello-world
+    port: 50051
+  nginx-grpc:
+    replicas: 3
+    image: docker-local:5000/nginx-grpc
     port: 50051
